Bug 157005 - Floating table view glitches while inserting lines
Summary: Floating table view glitches while inserting lines
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords:
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2023-08-30 10:05 UTC by stragu
Modified: 2023-11-17 06:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample DOCX (10.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-08-30 10:05 UTC, stragu
Details
screenshot of glitches (72.49 KB, image/png)
2023-08-30 10:07 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-08-30 10:05:05 UTC
Created attachment 189244 [details]
sample DOCX

Follow-up from bug 156682.

Steps:
1. Open attachment
2. With cursor at end of cell B1, press Enter to insert a new line: cell extends to second page as expected.
3. Keep pressing Enter

Result:
Cursor seems to jump to cell B2 and lines below without adding lines (but the table frame extends). Typing overlays text on existing text.

Clicking elsewhere or changing the zoom level sometimes refreshes the view to what is expected.

Tested with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 16d43b7c5396d6382926d514dc9ce10b3ce94cba
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2023-08-30 10:07:40 UTC
Created attachment 189245 [details]
screenshot of glitches

Sample of what you might end up with by adding lines, adding text and removing lines:
- frame does not match table size
- gap inside table
- overlapping text runs

Same with gtk3 and gen VCL plugins.
Comment 2 Miklos Vajna 2023-08-31 06:26:22 UTC
Thanks, will try to reproduce later.
Comment 3 Miklos Vajna 2023-09-14 11:45:34 UTC
Yes, I can reproduce the overlapping text in case I press enter twice at the end of B1.
Comment 4 Commit Notification 2023-09-19 07:37:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf2be3754b4c48382a61e044209c077bf59c72f2

tdf#157005 sw floattable: fix missing format of next row in follow fly

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-25 12:06:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1b6ed32cd87c40e3b3de4dac4efa035c6394a1d5

tdf#157005 sw floattable: fix missing format of next row in follow fly

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-09-27 17:21:10 UTC
Thanks Miklos, looking good now in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2902ab24ecc5ffbf4907ea83b2028508b9de6364
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded