tdf#157005 sw floattable: fix missing format of next row in follow fly

The bugdoc has a multi-page floating table, the B1 cell is on page 1.
Pressing enter at the end of the cell first creates a split cell (on
page 1 and page 2), but then pressing enter once more leads to
overlapping text.

The trouble seems to be that the second row has its
mbFrameAreaPositionValid set to false, but nobody formats the row, that
would recalc its position.

Fix the problem by relaxing the check in SwLayAction::FormatContent(),
so we do a full format not only in case there are to-para anchored
objects to the current content frame, but also do the same in case it's
a follow and the matching master has some draw objects that are
effectively anchored in the current content frame.

Previously this wasn't a problem, because split flys are the only
construct where a follow frame can have to-para anchored objects.

(cherry picked from commit cf2be3754b4c48382a61e044209c077bf59c72f2)

Change-Id: I0893aced3ad59963f87874c5aff0e57ad325c01b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157093
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>